continued to rebuild project in js

--- a/index.html
+++ b/index.html
@@ -12,34 +12,16 @@
 
 <body>
     <div class="container">
-        <div class="header" id = "header-container">
+        <div id = "header-container">
         </div>
-        <div class="sidebar">
-            <div class="brand-logo">
-                <div class="logo-image"><img src="SVGs-and-Images/spiral.png" alt="the brand logo." width="50px"
-                        height="auto"></div>
-                <div class="brand-logo-text">Dashboard</div>
-            </div>
-            <div class="nav-links">
-                <button class="sidebar-button" id="sidebar-home" class="sidebar-links">Home</button>
-                <button class="sidebar-button" id="sidebar-profile" class="sidebar-links">Profile</button>
-                <button class="sidebar-button" id="sidebar-messages" class="sidebar-links">Messages</button>
-                <button class="sidebar-button" id="sidebar-history" class="sidebar-links">History</button>
-                <button class="sidebar-button" id="sidebar-tasks" class="sidebar-links">Tasks</button>
-                <button class="sidebar-button" id="sidebar-communities" class="sidebar-links">Communities</button>
-            </div>
-            <div class="general-settings">
-                <button class="sidebar-button" id="sidebar-settngs" class="sidebar-links">Settings</button>
-                <button class="sidebar-button" id="sidebar-support" class="sidebar-links">Support</button>
-                <button class="sidebar-button" id="sidebar-privacy" class="sidebar-links">Privacy</button>
-            </div>
+        <div id="sidebar">
         </div>
         <div class="main">
-            <div class="projects-container" id = "projects-container">
+            <div id = "projects-container">
             </div>
-            <div class="announcements-container" id = "announcements-container">
+            <div id = "announcements-container">
             </div>
-            <div class="trending-container">
+            <div id ="trending-container">
                 <div>
                     <h4>Trending</h4>
                 </div>
