finished rewriting the project in js, need to fix a few things in CSS

--- a/index.html
+++ b/index.html
@@ -1,63 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Alpha Centauri Social Interaction Center (ACSIC)</title>
-</head>
+  </head>
 
-<body>
-    <div class="container">
-        <div id = "header-container">
-        </div>
-        <div id="sidebar">
-        </div>
-        <div class="main">
-            <div id = "projects-container">
-            </div>
-            <div id = "announcements-container">
-            </div>
-            <div id ="trending-container">
-                <div>
-                    <h4>Trending</h4>
-                </div>
-                <div class="trending">
-                    <div id="trending-one" class="trending-cell">
-                        <div class="trending-pic">PIC1</div>
-                        <div class="trending-user-info">
-                            <div class="trending-username">@WHAT</div>
-                            <div class="trending-userbio">BIO</div>
-                        </div>
-                    </div>
-                    <div id="trending-two" class="trending-cell">
-                        <div class="trending-pic">PIC2</div>
-                        <div class="trending-user-info">
-                            <div class="trending-username">@WHAT</div>
-                            <div class="trending-userbio">BIO</div>
-                        </div>
-                    </div>
-                    <div id="trending-three" class="trending-cell">
-                        <div class="trending-pic">PIC3</div>
-                        <div class="trending-user-info">
-                            <div class="trending-username">@WHAT</div>
-                            <div class="trending-userbio">BIO</div>
-                        </div>
-                    </div>
-                    <div id="trending-four" class="trending-cell">
-                        <div class="trending-pic">PIC4</div>
-                        <div class="trending-user-info">
-                            <div class="trending-username">@WHAT</div>
-                            <div class="trending-userbio">BIO</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-</body>
-
+  <body>
+    <div id="container"></div>
+  </body>
 </html>
-
